Update dependency org.mnode.ical4j:ical4j to v4.1.0 (#757)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>