@@ -1,7 +1,7 @@
 val kotlinVersion = "2.1.20"
 val springBootVersion = "3.4.4"
 val jwtVersion = "0.12.6"
-val ical4jVersion = "4.0.8"
+val ical4jVersion = "4.1.1"
 
 val springDocVersion = "2.8.6"
 val jacksonVersion = "2.18.3"
@@ -132,5 +132,6 @@ openApi {
 
 tasks.withType<Test> {
     environment("spring.profiles.active", "test")
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
 }
